<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global Application Strings -->
    <string name="app_name">Charity Workout</string>
    <string name="splash">Loading....</string>

    <!-- Menu Item Strings -->
    <string name="action_settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="exit_app">Exit</string>

    <!-- Mainmenu Strings -->
    <string name="homeText">Please select your workout</string>
    <string name="aboutUsText">Made by C1 of University of Rotterdam. Copyright 2013</string>
    
    <!-- Location Listener Strings -->
    <string name="location">Location fixed. You can now start your workout.</string>
    <string name="setLocation">Looking for current location.</string>
    <string name="gps">Please re-enable your gps.</string>
    <string name="invalidplay">INVALID PLAY SERVICES</string>

    <!-- Workout Screen Strings -->
    <string name="pauseWorkout">PAUSED</string>
    <string name="stopWarning">Press \'Stop\' again to end your workout.</string>
    <string name="stopWorkout">ENDED</string>
    <string name="speed">0 km/u</string>
    <string name="amount">€00,00</string>
    <string name="timer">00:00</string>
    <string name="distance">0 km</string>
    
    <!-- Unsorted Strings (sort asap) -->
    <string name="amountText">Please set your amount of donation per kilometer</string>
    <string name="image">image</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="setAmount">Set your own amount</string>
    <string name="submit">Submit</string>

    <!-- History strings -->
    <string name="arrangement">Workout \t speed \t distance \t time \t amount</string>
    <string name="historyPage">History</string>
    <string name="donation">Donate</string>
    <string name="delete">Delete</string>
    <string name="nohistory">No workout history found.</string>
    <string name="thanks">Thanks for doing workout with us, please remind yourself to donate amount of money to the charity of your own choice</string>

</resources>
