<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/amountText"
            android:id="@+id/AmountSet" android:layout_gravity="center" android:layout_marginTop="75dp"
            android:gravity="center_horizontal"/>
    <RadioGroup
            android:layout_width="236dp"
            android:layout_height="170dp" android:layout_gravity="center|left" android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="€0.10"
                android:id="@+id/tenCent" android:checked="false"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="€0.20"
                android:id="@+id/twentyCent" android:layout_gravity="left|center_vertical" android:checked="false"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="€0.50"
                android:id="@+id/fiftyCent" android:layout_gravity="center_vertical|left" android:checked="false"/>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center_horizontal">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SetAmount" android:checked="false"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText" android:hint="@string/setAmount" android:layout_gravity="center"
                android:layout_weight="0.92"/>
        </LinearLayout>
    </RadioGroup>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/Submit" android:layout_gravity="center" android:layout_marginTop="10dp"/>
    

</LinearLayout>